--- a/index.html
+++ b/index.html
@@ -19,14 +19,17 @@
     </section>
 
     <section class="main-content">
-      <h2>
-<a id="注册流程" class="anchor" href="#%E6%B3%A8%E5%86%8C%E6%B5%81%E7%A8%8B" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>注册流程</h2>
+      <h1>
+<a id="接口文档" class="anchor" href="#%E6%8E%A5%E5%8F%A3%E6%96%87%E6%A1%A3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>接口文档</h1>
 
-<h3>
-<a id="说明" class="anchor" href="#%E8%AF%B4%E6%98%8E" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>说明</h3>
+<h2>
+<a id="说明" class="anchor" href="#%E8%AF%B4%E6%98%8E" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>说明</h2>
 
 <p>请求正确返回格式:{"status":"OK",code: 200,"data":返回数据}<br>
 请求错误返回格式:{"status": "Error","error_code": "错误代码","error_msg": "错误信息"}</p>
+
+<h2>
+<a id="注册流程" class="anchor" href="#%E6%B3%A8%E5%86%8C%E6%B5%81%E7%A8%8B" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>注册流程</h2>
 
 <ul>
 <li>注册<br>
@@ -99,6 +102,246 @@ demo:<br>
 {"status":"Error","error_code":10004,"error_msg":"The User Has Been Verified"}<br>
 {"status":"Error","error_code":10003,"error_msg":"Expire"}<br>
 {"status":"Error","error_code":500,"error_msg":"......"}</p>
+
+<h2>
+<a id="服务类型接口" class="anchor" href="#%E6%9C%8D%E5%8A%A1%E7%B1%BB%E5%9E%8B%E6%8E%A5%E5%8F%A3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>服务类型接口</h2>
+
+<ul>
+<li>获取列表<br>
+接口地址: <a href="http://139.196.203.14:3010/api/v1/servicetypes">http://139.196.203.14:3010/api/v1/servicetypes</a><br>
+请求方式: GET<br>
+demo:</li>
+</ul>
+
+<div class="highlight highlight-source-js"><pre>        <span class="pl-smi">$</span>.<span class="pl-en">ajax</span>({
+            type<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">"</span>GET<span class="pl-pds">"</span></span>,
+            url<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">"</span>http://139.196.203.14:3010/api/v1/servicetypes<span class="pl-pds">"</span></span>,
+            data<span class="pl-k">:</span>{
+            },
+            <span class="pl-en">success</span><span class="pl-k">:</span><span class="pl-k">function</span>(<span class="pl-smi">data</span>){
+                <span class="pl-en">alert</span>(<span class="pl-c1">JSON</span>.<span class="pl-en">stringify</span>(data));
+            }
+        })</pre></div>
+
+<p>返回结果:<br>
+    * 成功: {"status":"OK","code":200,"data":[{"id":1,"title":"测试","img":"<a href="http://test.img%22,%22star%22:4,%22des%22:%22abcd%22%7D,%7B%22id%22:2,%22title%22:%22%E6%B5%8B%E8%AF%95%22,%22img%22:%22http://test.img%22,%22star%22:4,%22des%22:%22abcd">http://test.img","star":4,"des":"abcd"},{"id":2,"title":"测试","img":"http://test.img","star":4,"des":"abcd</a>"}]}<br>
+    * 失败:<br>
+{"status":"Error","error_code":500,"error_msg":"......"}</p>
+
+<ul>
+<li>新增<br>
+接口地址: <a href="http://139.196.203.14:3010/api/v1/servicetypes">http://139.196.203.14:3010/api/v1/servicetypes</a><br>
+请求方式: POST<br>
+demo:<br>
+</li>
+</ul>
+
+<div class="highlight highlight-source-js"><pre>        <span class="pl-smi">$</span>.<span class="pl-en">ajax</span>({
+            type<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">"</span>POST<span class="pl-pds">"</span></span>,
+            url<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">"</span>http://127.0.0.1:3010/api/v1/servicetypes<span class="pl-pds">"</span></span>,
+            data<span class="pl-k">:</span>{
+                title<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>测试<span class="pl-pds">'</span></span>,
+                img<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>http://test.img<span class="pl-pds">'</span></span>,
+                star<span class="pl-k">:</span> <span class="pl-c1">4</span>,
+                des<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>abcd<span class="pl-pds">'</span></span>
+            },
+            <span class="pl-en">success</span><span class="pl-k">:</span><span class="pl-k">function</span>(<span class="pl-smi">data</span>){
+                <span class="pl-en">alert</span>(<span class="pl-c1">JSON</span>.<span class="pl-en">stringify</span>(data));
+            }
+        })</pre></div>
+
+<p>返回结果:<br>
+    * 成功: {"status":"OK","code":200}<br>
+    * 失败:<br>
+{"status":"Error","error_code":500,"error_msg":"......"}</p>
+
+<h2>
+<a id="任务接口" class="anchor" href="#%E4%BB%BB%E5%8A%A1%E6%8E%A5%E5%8F%A3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>任务接口</h2>
+
+<ul>
+<li>发布任务<br>
+接口地址: <a href="http://139.196.203.14:3010/api/v1/jobs">http://139.196.203.14:3010/api/v1/jobs</a><br>
+请求方式: POST<br>
+demo:<br>
+</li>
+</ul>
+
+<div class="highlight highlight-source-js"><pre>        <span class="pl-smi">$</span>.<span class="pl-en">ajax</span>({
+            type<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">"</span>POST<span class="pl-pds">"</span></span>,
+            url<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">"</span>http://139.196.203.14:3010/api/v1/jobs<span class="pl-pds">"</span></span>,
+            data<span class="pl-k">:</span>{
+                title<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>测试<span class="pl-pds">'</span></span>,
+                des<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>描述<span class="pl-pds">'</span></span>,
+                city<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>上海<span class="pl-pds">'</span></span>,
+                servicetype<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>1,2<span class="pl-pds">'</span></span>,
+                starttime<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>2016-02-03<span class="pl-pds">'</span></span>,
+                endtime<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>2016-02-04<span class="pl-pds">'</span></span>,
+                min<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>3.02<span class="pl-pds">'</span></span>,
+                max<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>234.32<span class="pl-pds">'</span></span>,
+                location<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>xcsfdsafsa<span class="pl-pds">'</span></span>
+            },
+            <span class="pl-en">success</span><span class="pl-k">:</span><span class="pl-k">function</span>(<span class="pl-smi">data</span>){
+                <span class="pl-en">alert</span>(<span class="pl-c1">JSON</span>.<span class="pl-en">stringify</span>(data));
+            }
+        })</pre></div>
+
+<p>返回结果:<br>
+    * 成功: {"status":"OK","code":200}<br>
+    * 失败:<br>
+{"status":"Error","error_code":500,"error_msg":"......"}  </p>
+
+<ul>
+<li>获取任务列表<br>
+接口地址: <a href="http://139.196.203.14:3010/api/v1/jobs">http://139.196.203.14:3010/api/v1/jobs</a> 
+请求方式: GET<br>
+demo:</li>
+</ul>
+
+<div class="highlight highlight-source-js"><pre>        <span class="pl-smi">$</span>.<span class="pl-en">ajax</span>({
+            type<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">"</span>GET<span class="pl-pds">"</span></span>,
+            url<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">"</span>http://139.196.203.14/api/v1/jobs<span class="pl-pds">"</span></span>,
+            data<span class="pl-k">:</span>{
+            },
+            <span class="pl-en">success</span><span class="pl-k">:</span><span class="pl-k">function</span>(<span class="pl-smi">data</span>){
+                <span class="pl-en">alert</span>(<span class="pl-c1">JSON</span>.<span class="pl-en">stringify</span>(data));
+            }
+        })</pre></div>
+
+<p>返回结果:<br>
+    * 成功: {"status":"OK","code":200,"data":[{"id":1,"title":"测试","des":"描述","city":"上海","servicetype":"1,2","starttime":"2016-02-03","endtime":"2016-02-04","max":234.32,"min":3.02,"location":"xcsfdsafsa"}]}<br>
+    * 失败:<br>
+{"status":"Error","error_code":500,"error_msg":"......"} </p>
+
+<ul>
+<li>获取任务明细<br>
+接口地址: <a href="http://139.196.203.14:3010/api/v1/jobs/id">http://139.196.203.14:3010/api/v1/jobs/id</a>  (id为任务id)<br>
+请求方式: GET<br>
+demo:</li>
+</ul>
+
+<div class="highlight highlight-source-js"><pre>        <span class="pl-smi">$</span>.<span class="pl-en">ajax</span>({
+            type<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">"</span>GET<span class="pl-pds">"</span></span>,
+            url<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">"</span>http://139.196.203.14/api/v1/jobs/1<span class="pl-pds">"</span></span>,
+            data<span class="pl-k">:</span>{
+            },
+            <span class="pl-en">success</span><span class="pl-k">:</span><span class="pl-k">function</span>(<span class="pl-smi">data</span>){
+                <span class="pl-en">alert</span>(<span class="pl-c1">JSON</span>.<span class="pl-en">stringify</span>(data));
+            }
+        })</pre></div>
+
+<p>返回结果:<br>
+    * 成功: {"status":"OK","code":200,"data":[{"id":1,"title":"测试","des":"描述","city":"上海","servicetype":"1,2","starttime":"2016-02-03","endtime":"2016-02-04","max":234.32,"min":3.02,"location":"xcsfdsafsa"}]}<br>
+    * 失败:<br>
+{"status":"Error","error_code":500,"error_msg":"......"}  </p>
+
+<h2>
+<a id="服务商入口" class="anchor" href="#%E6%9C%8D%E5%8A%A1%E5%95%86%E5%85%A5%E5%8F%A3" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>服务商入口</h2>
+
+<ul>
+<li>获取列表<br>
+接口地址: <a href="http://139.196.203.14:3010/api/v1/portals">http://139.196.203.14:3010/api/v1/portals</a><br>
+请求方式: GET<br>
+demo:</li>
+</ul>
+
+<div class="highlight highlight-source-js"><pre>        <span class="pl-smi">$</span>.<span class="pl-en">ajax</span>({
+            type<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">"</span>GET<span class="pl-pds">"</span></span>,
+            url<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">"</span>http://139.196.203.14:3010/api/v1/portals<span class="pl-pds">"</span></span>,
+            data<span class="pl-k">:</span>{
+            },
+            <span class="pl-en">success</span><span class="pl-k">:</span><span class="pl-k">function</span>(<span class="pl-smi">data</span>){
+                <span class="pl-en">alert</span>(<span class="pl-c1">JSON</span>.<span class="pl-en">stringify</span>(data));
+            }
+        })</pre></div>
+
+<ul>
+<li>单个服务商详细信息<br>
+接口地址: <a href="http://139.196.203.14:3010/api/v1/portals/id">http://139.196.203.14:3010/api/v1/portals/id</a>  (id为服务商id)<br>
+请求方式: GET<br>
+demo:</li>
+</ul>
+
+<div class="highlight highlight-source-js"><pre>        <span class="pl-smi">$</span>.<span class="pl-en">ajax</span>({
+            type<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">"</span>GET<span class="pl-pds">"</span></span>,
+            url<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">"</span>http://139.196.203.14:3010/api/v1/portals/4<span class="pl-pds">"</span></span>,
+            data<span class="pl-k">:</span>{
+            },
+            <span class="pl-en">success</span><span class="pl-k">:</span><span class="pl-k">function</span>(<span class="pl-smi">data</span>){
+                <span class="pl-en">alert</span>(<span class="pl-c1">JSON</span>.<span class="pl-en">stringify</span>(data));
+            }
+        })</pre></div>
+
+<ul>
+<li>新增<br>
+接口地址: <a href="http://139.196.203.14:3010/api/v1/portals">http://139.196.203.14:3010/api/v1/portals</a><br>
+请求方式: POST<br>
+demo:<br>
+</li>
+</ul>
+
+<div class="highlight highlight-source-js"><pre>        <span class="pl-smi">$</span>.<span class="pl-en">ajax</span>({
+            type<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">"</span>POST<span class="pl-pds">"</span></span>,
+            url<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">"</span>http://139.196.203.14:3010/api/v1/portals<span class="pl-pds">"</span></span>,
+            data<span class="pl-k">:</span>{
+                teamname<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>测试团队1<span class="pl-pds">'</span></span>,
+                tel<span class="pl-k">:</span><span class="pl-c1">13706207777</span>,
+                wechat<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>colin<span class="pl-pds">'</span></span>,
+                email<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>xx@qq.com<span class="pl-pds">'</span></span>,
+                city<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>广州<span class="pl-pds">'</span></span>,
+                servicetime<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>全天<span class="pl-pds">'</span></span>,
+                equipment<span class="pl-k">:</span>[{type<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>无人机<span class="pl-pds">'</span></span>,model<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>大疆精灵3<span class="pl-pds">'</span></span>},{type<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>无人机<span class="pl-pds">'</span></span>,model<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>大疆精灵3<span class="pl-pds">'</span></span>}],
+                servicetype<span class="pl-k">:</span>[<span class="pl-c1">1</span>,<span class="pl-c1">2</span>],
+                des<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>测试<span class="pl-pds">'</span></span>
+            },
+            <span class="pl-en">success</span><span class="pl-k">:</span><span class="pl-k">function</span>(<span class="pl-smi">data</span>){
+                <span class="pl-en">alert</span>(<span class="pl-c1">JSON</span>.<span class="pl-en">stringify</span>(data));
+            }
+        })</pre></div>
+
+<ul>
+<li>修改<br>
+接口地址: <a href="http://139.196.203.14:3010/api/v1/portals/id">http://139.196.203.14:3010/api/v1/portals/id</a>  (id为服务商id)<br>
+请求方式: PUT<br>
+demo:<br>
+</li>
+</ul>
+
+<div class="highlight highlight-source-js"><pre>        <span class="pl-smi">$</span>.<span class="pl-en">ajax</span>({
+            type<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">"</span>POST<span class="pl-pds">"</span></span>,
+            url<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">"</span>http://139.196.203.14:3010/api/v1/portals/4<span class="pl-pds">"</span></span>,
+            data<span class="pl-k">:</span>{
+                teamname<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>测试团队1<span class="pl-pds">'</span></span>,
+                tel<span class="pl-k">:</span><span class="pl-c1">13706207777</span>,
+                wechat<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>colin<span class="pl-pds">'</span></span>,
+                email<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>xx@qq.com<span class="pl-pds">'</span></span>,
+                city<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>广州<span class="pl-pds">'</span></span>,
+                servicetime<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>全天<span class="pl-pds">'</span></span>,
+                equipment<span class="pl-k">:</span>[{type<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>无人机<span class="pl-pds">'</span></span>,model<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>大疆精灵3<span class="pl-pds">'</span></span>},{type<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>无人机<span class="pl-pds">'</span></span>,model<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>大疆精灵3<span class="pl-pds">'</span></span>}],
+                content<span class="pl-k">:</span>[<span class="pl-s"><span class="pl-pds">'</span>婚庆<span class="pl-pds">'</span></span>,<span class="pl-s"><span class="pl-pds">'</span>工地<span class="pl-pds">'</span></span>],
+                des<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">'</span>测试<span class="pl-pds">'</span></span>
+            },
+            <span class="pl-en">success</span><span class="pl-k">:</span><span class="pl-k">function</span>(<span class="pl-smi">data</span>){
+                <span class="pl-en">alert</span>(<span class="pl-c1">JSON</span>.<span class="pl-en">stringify</span>(data));
+            }
+        })</pre></div>
+
+<ul>
+<li>删除<br>
+接口地址: <a href="http://139.196.203.14:3010/api/v1/portals/id">http://139.196.203.14:3010/api/v1/portals/id</a>  (id为服务商id)<br>
+请求方式: DELETE<br>
+demo:<br>
+</li>
+</ul>
+
+<div class="highlight highlight-source-js"><pre>          <span class="pl-smi">$</span>.<span class="pl-en">ajax</span>({
+            type<span class="pl-k">:</span><span class="pl-s"><span class="pl-pds">"</span>DELETE<span class="pl-pds">"</span></span>,
+            url<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">"</span>http://139.196.203.14:3010/api/v1/portals/3<span class="pl-pds">"</span></span>,
+            data<span class="pl-k">:</span>{
+            },
+            <span class="pl-en">success</span><span class="pl-k">:</span><span class="pl-k">function</span>(<span class="pl-smi">data</span>){
+                <span class="pl-en">alert</span>(<span class="pl-c1">JSON</span>.<span class="pl-en">stringify</span>(data));
+            }
+        })</pre></div>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/wenqingyu/airplake_backend">Airplake backend Document</a> is maintained by <a href="https://github.com/wenqingyu">wenqingyu</a>.</span>
